--- a/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/classes.html
+++ b/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/classes.html
@@ -4,46 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases</td>
+<td>northeasternunversity.cxplatform.employeeportaltestcases.dashboard.LatestNewsTestCases</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>NUCP57</td>
+<td>NUCP75</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>NUCP56</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>NUCP54</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>NUCP53</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>NUCP179</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>NUCP178</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>NUCP174</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>NUCP49</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>NUCP173</td>
+<td>NUCP74</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
